--- a/nginx.conf
+++ b/nginx.conf
@@ -21,16 +21,30 @@ http {
         server_name  localhost;
 
         location / {
+
             root   src/main;
             index  index.html index.htm;
-        }
 
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   html;
+            if ($request_method = 'OPTIONS') {            
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Credentials' 'true';
+                add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
+                add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;                
+                return 204;
+            }
+
+            if ($request_method = 'GET') {            
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Credentials' 'true';
+                add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
+                add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';            
+            }
+
         }
 
     }
-
 
 }
